fixed list spacing and results if an author isn't listed

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -15,6 +15,7 @@ div.jumbotron {
 
 .list-item {
     display: block;
+    min-height: 44px;
 }
 
 button.addToList, button.removeFromList, button.addToComplete {
@@ -32,6 +33,7 @@ button.addToList, button.removeFromList, button.addToComplete {
 #main-card, #allResults {
       height: 50%;
 }
+
 
 /* Completed Books */
 button.removeFromComplete {
